[gd_scene load_steps=6 format=3 uid="uid://cvdygx7njshus"]

[ext_resource type="Script" path="res://main.gd" id="1_1l1ld"]
[ext_resource type="PackedScene" uid="uid://g74wtsii2osk" path="res://env.tscn" id="1_w022d"]
[ext_resource type="Script" path="res://SnakeTable.gd" id="2_4x04g"]
[ext_resource type="Script" path="res://Vision.gd" id="2_7ybtq"]
[ext_resource type="Script" path="res://TestButton.gd" id="5_frw82"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1l1ld")

[node name="SnakeTable" type="Tree" parent="."]
layout_mode = 0
offset_left = 846.0
offset_top = 41.0
offset_right = 1143.0
offset_bottom = 736.0
focus_mode = 0
columns = 3
column_titles_visible = true
allow_reselect = true
hide_root = true
select_mode = 1
scroll_horizontal_enabled = false
script = ExtResource("2_4x04g")

[node name="Env" parent="." instance=ExtResource("1_w022d")]
position = Vector2(37, 34)

[node name="Vision" type="Node2D" parent="."]
position = Vector2(2068, 605)
script = ExtResource("2_7ybtq")

[node name="VisionControl" type="HBoxContainer" parent="Vision"]
offset_left = -732.0
offset_top = 121.0
offset_right = -440.0
offset_bottom = 161.0
metadata/_edit_group_ = true

[node name="VisionRotate" type="CheckBox" parent="Vision/VisionControl"]
layout_mode = 2
focus_mode = 0
text = "Rotate With Snake"

[node name="VisionShowFood" type="CheckBox" parent="Vision/VisionControl"]
layout_mode = 2
focus_mode = 0
text = "Heads Only"

[node name="TestButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1444.0
offset_top = 783.0
offset_right = 1482.0
offset_bottom = 814.0
text = "test"
script = ExtResource("5_frw82")

[connection signal="item_selected" from="SnakeTable" to="." method="_on_snake_table_item_selected"]
[connection signal="toggled" from="Vision/VisionControl/VisionRotate" to="." method="_on_vision_rotate_toggled"]
[connection signal="toggled" from="Vision/VisionControl/VisionShowFood" to="." method="_on_vision_show_food_toggled"]
[connection signal="pressed" from="TestButton" to="TestButton" method="_on_pressed"]
